Fix Firefox z-index issue

--- a/assets/css/hopscotch.css
+++ b/assets/css/hopscotch.css
@@ -528,7 +528,7 @@ div.hopscotch-bubble .hopscotch-actions {
 div.hopscotch-overlay {
   position: absolute;
   opacity: .3;
-  z-index: 1;
+  z-index: 10;
   background-color: #000;
 }
 div.hopscotch-overlay.hide {
