--- a/assets/css/tour.css
+++ b/assets/css/tour.css
@@ -82,3 +82,7 @@
 .pageId {
   font-size: 10px;
 }
+
+.bg-image {
+  z-index: 1
+}
